http01/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: istiosvc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver
  sessionAffinity: None
  type: ClusterIP
